// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.H2 should render default markup when no props are passed 1`] = `
<h2
  className="h2 h2--regular h2--onyx-base fsqIAZ"
>
  Hello world
</h2>
`;

exports[`Typography.H2 should render with a custom color prop that lacks variants 1`] = `
<h2
  className="h2 h2--regular h2--brand-base bNRgai"
  color="brand"
>
  Hello world
</h2>
`;

exports[`Typography.H2 should render with a custom weight prop 1`] = `
<h2
  className="h2 h2--semiBold h2--onyx-base bNdFcW"
>
  Hello world
</h2>
`;

exports[`Typography.H2 should render with a textTransform prop 1`] = `
<h2
  className="h2 h2--regular h2--onyx-base bLVKpz"
>
  Hello world
</h2>
`;

exports[`Typography.H2 should render with custom color and variant props 1`] = `
<h2
  className="h2 h2--regular h2--accent01-dark eTawyn"
  color="accent01"
>
  Hello world
</h2>
`;

exports[`Typography.H2 should render without a theme 1`] = `
<h2
  className="h2 h2--regular h2--onyx-base fsqIAZ"
/>
`;

exports[`Typography.H2 should render without children 1`] = `
<h2
  className="h2 h2--regular h2--onyx-base fsqIAZ"
/>
`;
